--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
 
 
-    <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/fontawesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Livvic&family=Montserrat&family=Poppins&family=Roboto&display=swap" rel="stylesheet">
@@ -121,14 +120,14 @@
 
                 </section>
                 <section class="elegance-part1">
-                    <img src="css/images/pexels-nappy-2468487.jpg" alt="">
+                    <img src="css/images/item1.jpeg" alt="">
 
                     <p>
                         Lorem ipsum dolor sit amet consectetur aspernatur aliquid expedita corporis dolore voluptatibus repellat molestiae.
                     </p>
                 </section>
                 <section class="elegance-part2">
-                    <img src="css/images/pexels-pixabay-157675.jpg" alt="">
+                    <img src="css/images/item2.jpeg" alt="">
 
                 </section>
             </div>
@@ -171,112 +170,119 @@
 
                 </div>
             </div>
+
             <div class="container3">
-                <div class="swiper shirt-swiper">
-                    <div class="swiper-wrapper">
-                        <div class="shirtcard swiper-slide">
-                            <div class="shirtcard-img">
-                                <img src="css/images/images - 2022-03-06T125502.122.jpeg" alt="">
-                                <div class="overlay">
-                                    <a href="#" class="buy-btn">Buy Now</a>
-                                </div>
-                            </div>
-                            <!--overlay--!-->
 
-                            <div class="shirtcard-text">
-                                <div class="type">
-                                    <a href="#">
-                             Vintage Shirt
-                         </a>
-                                    <span>AhaZ Shirts</span>
 
-                                </div>
-                                <a href="#" class="price">$100</a>
-
+                <div class="swiper-slide">
+                    <div class="shirtcard">
+                        <div class="shirtcard-img">
+                            <img src="css/images/images - 2022-03-06T125502.122.jpeg" alt="">
+                            <div class="overlay">
+                                <a href="#" class="buy-btn">Buy Now</a>
                             </div>
                         </div>
-                        <div class="shirtcard swiper-slide">
-                            <div class="shirtcard-img">
-                                <img src="css/images/images - 2022-03-05T173826.599.jpeg" alt="">
-                                <div class="overlay">
-                                    <a href="#" class="buy-btn">Buy Now</a>
-                                </div>
-                            </div>
+                        <!--overlay--!-->
 
-                            <div class="shirtcard-text">
-                                <div class="type">
-                                    <a href="#">
-                             Vintage Shirt
-                         </a>
-                                    <span>AhaZ Shirts</span>
-
-                                </div>
-                                <a href="#" class="price">$100</a>
+                        <div class="shirtcard-text">
+                            <div class="type">
+                                <a href="#">
+                                 Vintage Shirt
+                             </a>
+                                <span>AhaZ Shirts</span>
 
                             </div>
-                        </div>
-                        <div class="shirtcard swiper-slide">
-                            <div class="shirtcard-img">
-                                <img src="css/images/images - 2022-03-06T132451.765.jpeg" alt="">
-                                <div class="overlay">
-                                    <a href="#" class="buy-btn">Buy Now</a>
-                                </div>
-                            </div>
+                            <a href="#" class="price">$100</a>
 
-                            <div class="shirtcard-text">
-                                <div class="type">
-                                    <a href="#">
-                             Vintage Shirt
-                         </a>
-                                    <span>AhaZ Shirts</span>
-
-                                </div>
-                                <a href="#" class="price">$100</a>
-
-                            </div>
-                        </div>
-                        <div class="shirtcard swiper-slide">
-                            <div class="shirtcard-img">
-                                <img src="css/images/images - 2022-03-06T132505.087.jpeg" alt="">
-                                <div class="overlay">
-                                    <a href="#" class="buy-btn">Buy Now</a>
-                                </div>
-                            </div>
-
-                            <div class="shirtcard-text">
-                                <div class="type">
-                                    <a href="#">
-                             Vintage Shirt
-                         </a>
-                                    <span>AhaZ Shirts</span>
-
-                                </div>
-                                <a href="#" class="price">$100</a>
-
-                            </div>
-                        </div>
-                        <div class="shirtcard swiper-slide">
-
-                            <div class="shirtcard-img">
-                                <img src="css/images/images - 2022-03-05T173813.904.jpeg" alt="">
-                                <div class="overlay">
-                                    <a href="#" class="buy-btn">Buy Now</a>
-                                </div>
-                            </div>
-                            <div class="shirtcard-text">
-                                <div class="type">
-                                    <a href="#">
-                             Vintage Shirt
-                         </a>
-                                    <span>AhaZ Shirts</span>
-                                </div>
-                                <a href="#" class="price">$100</a>
-                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="swiper-slide">
+                    <div class="shirtcard">
+                        <div class="shirtcard-img">
+                            <img src="css/images/images - 2022-03-05T173826.599.jpeg" alt="">
+                            <div class="overlay">
+                                <a href="#" class="buy-btn">Buy Now</a>
+                            </div>
+                        </div>
 
-                <a href="see more" class="more-link">see more <i class="fas fa-long-arrow-alt-right"></i></a>
+                        <div class="shirtcard-text">
+                            <div class="type">
+                                <a href="#">
+                                 Vintage Shirt
+                             </a>
+                                <span>AhaZ Shirts</span>
+
+                            </div>
+                            <a href="#" class="price">$100</a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="shirtcard">
+                        <div class="shirtcard-img">
+                            <img src="css/images/images - 2022-03-06T132451.765.jpeg" alt="">
+                            <div class="overlay">
+                                <a href="#" class="buy-btn">Buy Now</a>
+                            </div>
+                        </div>
+
+                        <div class="shirtcard-text">
+                            <div class="type">
+                                <a href="#">
+                                 Vintage Shirt
+                             </a>
+                                <span>AhaZ Shirts</span>
+
+                            </div>
+                            <a href="#" class="price">$100</a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="shirtcard">
+                        <div class="shirtcard-img">
+                            <img src="css/images/images - 2022-03-06T132505.087.jpeg" alt="">
+                            <div class="overlay">
+                                <a href="#" class="buy-btn">Buy Now</a>
+                            </div>
+                        </div>
+
+                        <div class="shirtcard-text">
+                            <div class="type">
+                                <a href="#">
+                                            Vintage Shirt
+                                        </a>
+                                <span>AhaZ Shirts</span>
+
+                            </div>
+                            <a href="#" class="price">$100</a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="shirtcard">
+                        <div class="shirtcard-img">
+                            <img src="css/images/item11.jpeg" alt="">
+                            <div class="overlay">
+                                <a href="#" class="buy-btn">Buy Now</a>
+                            </div>
+                        </div>
+                        <div class="shirtcard-text">
+                            <div class="type">
+                                <a href="#">
+                                        Vintage Shirt
+                                        </a>
+                                <span>AhaZ Shirts</span>
+                            </div>
+                            <a href="#" class="price">$100</a>
+                        </div>
+                    </div>
+                </div>
+                <a href="#" class="more-link">see more <i class="fas fa-long-arrow-alt-right"></i></a>
             </div>
             <div class="container4">
                 <h4 class="tophead">Features collections</h4>
@@ -285,7 +291,7 @@
                 </p>
                 <div class="shirt-container">
                     <section class="feature-card">
-                        <img src="css/images/pexels-luis-quintero-1816870.jpg" alt="">
+                        <img src="css/images/item8.jpeg" alt="">
 
                         <button class="second-btn" style="color: white;">
                             T-Shirts 
@@ -294,7 +300,7 @@
 
                     </section>
                     <section class="feature-card number2">
-                        <img src="css/images/pexels-budgeron-bach-5157733.jpg" alt="">
+                        <img src="css/images/item7.jpeg" alt="">
 
                         <button class="second-btn">
                             T-Shirts 
@@ -305,6 +311,7 @@
                 </div>
             </div>
         </div>
+
         <div class="container">
             <div class="divider"></div>
             <div class="container5">
@@ -323,11 +330,11 @@
 
                 <section class="imagecontain">
                     <div>
-                        <img src="css/images/pexels-thegiansepillo-3757457.jpg" alt="">
+                        <img src="css/images/item10.jpeg" alt="">
 
                     </div>
                     <div class="thegian">
-                        <img src="css/images/pexels-rfstudio-3819572.jpg" alt="">
+                        <img src="css/images/item5.jpeg" alt="">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut illum in sequi vitae sint adipisci ducimus hic, quis vero quibusdam quo, totam reiciendis, quidem error!</p>
                         <button class="main-btn"> About us</button>
                     </div>
@@ -336,7 +343,8 @@
             <div class="divider"></div>
             <div class="container6">
                 <section>
-                    <img src="css/images/pexels-andrea-piacquadio-842811.jpg" alt="">
+                    <img src="css/images/item9.jpeg" alt="">
+                    <img src="css/images/item4.jpeg" alt="">
 
                 </section>
 
@@ -368,7 +376,7 @@
                     </div>
                 </div>
                 <div class="getintouch-img">
-                    <img src="css/images/pexels-nitin-sharma-2842842.jpg" alt="">
+                    <img src="css/images/item3.jpeg" alt="">
                 </div>
             </div>
 
@@ -447,17 +455,17 @@
         </p>
     </footer>
 
+
+    <!-- FONTAWESOME  JS FILE-->
+
+
+    <!-- SCROLLREVEAL  JS FILE -->
+    <script src="js/scrollreveal.min.js"></script>
+    <!-- swiper js file -->
+
+    <!-- MAIN JS FILE -->
+    <script src="js/blackwhite.js"></script>
+
 </body>
-
-<!-- FONTAWESOME  JS FILE-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/js/all.min.js"></script>
-
-<!-- SCROLLREVEAL  JS FILE -->
-<script src="js/scrollreveal.min.js"></script>
-<!-- swiper js file -->
-<script src="/js/swiper-bundle.min.js"></script>
-
-<!-- MAIN JS FILE -->
-<script src="js/blackwhite.js"></script>
 
 </html>
